Detect Cycle in Undirected Connected Graph